exports[`Avatar avatarSizes renders with large 1`] = `
<img
  className="ax-avatar ax-avatar--large"
  src="/image/path" />
`;

exports[`Avatar avatarSizes renders with medium 1`] = `
<img
  className="ax-avatar ax-avatar--medium"
  src="/image/path" />
`;

exports[`Avatar avatarSizes renders with small 1`] = `
<img
  className="ax-avatar ax-avatar--small"
  src="/image/path" />
`;

exports[`Avatar renders with defaultProps 1`] = `
<img
  className="ax-avatar ax-avatar--medium"
  src="/image/path" />
`;
